if such tags are present, an intermediate JRSortableDataSource will wrap 
the initial report data source and perform in-memory sorting before the 
records are fed into the report filling process;

- upside down text rotation;

- new exporter parameter and configuration property to disable the rendering
of SVG images using shapes in PDF and reduce file size;

- minor bug fixes and improvements;





JasperReports 1.2.7 (2006-09-21)
-----------------------------------

- extended support for charts including new chart types: 
meter chart, thermometer chart and multi-axis charts;

- minor bug fixes and improvements;





JasperReports 1.2.6 (2006-09-03)
-----------------------------------

- enhanced hyperlink support for text elements, images and charts;
hyperlinks per chart items for enhanced drill-through support;

- support for superscript and subscript in styled text;

- minor bug fixes and improvements;





JasperReports 1.2.5 (2006-07-11)
-----------------------------------

- new filter expression added to filter out records in a data source;

- "increment when" expression to filter out data in chart and crosstab datasets;

- new IS_DETECT_CELL_TYPE exporter parameter available for the XLS exporters,
to allow setting the correct cell data type in worksheets;
the former IS_AUTO_DETECT_CELL_TYPE is now deprecated;

- minor bug fixes and improvements;





JasperReports 1.2.4 (2006-06-23)
-----------------------------------

- new distinct count calculation supported;

- new REPORT_TIME_ZONE built-in parameter added to fully control date formatting;

- new FORCE_LINEBREAK_POLICY exporter parameter to force the PDF exporter to use
the same line break policy as in AWT;

- minor bug fixes and improvements;





JasperReports 1.2.3 (2006-05-30)
-----------------------------------
- support for OLAP and MDX queries using Mondrian-based 
query executer and data source implementations;

- support for EJBQL using JPA-based query executer implementation